--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>This is my <strong>very first time</strong> making a HTML file.</p>
     <p>Here are some Australian Shepherd puppies.</p>
     <p>They are full of energy</p>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started#active_learning_adding_attributes_to_an_element">Make one yourself!</a> </p>
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started#active_learning_adding_attributes_to_an_element">Here's how to make a website for yourself!</a> </p>
     <img src="https://cdn.britannica.com/55/164255-159-DDB8A459/litter-Australian-Shepherd-puppies.jpg" alt="Cute puppys" width="450" height="250"/>
   </body>
 </html>
