--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <body>
     <h1>My First HTML Project</h1>
     <p>This is my <strong>very first time</strong> making a HTML file.</p>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started#active_learning_adding_attributes_to_an_element">
-      Here's how to make a website for yourself!</a> </p>
     <p>Here are some Australian Shepherd puppies.</p>
     <img src="https://cdn.britannica.com/55/164255-159-DDB8A459/litter-Australian-Shepherd-puppies.jpg" alt="Cute puppys" width="450" height="250"/>
+    <a https="//www.akc.org/dog-breeds/australian-shepherd/">Click her to lern more about these dogs.</a>
   </body>
 </html>
