--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>This is my <strong>very first time</strong> making a HTML file.</p>
     <p>Here are some Australian Shepherd puppies.</p>
     <img src="https://cdn.britannica.com/55/164255-159-DDB8A459/litter-Australian-Shepherd-puppies.jpg" alt="Cute puppys" width="450" height="250"/>
-    <p><a https="https://www.akc.org/dog-breeds/australian-shepherd/">Click here to lern more about these dogs.</a></p>
+    <p><a https="https://www.akc.org/dog-breeds/australian-shepherd/">Click here to learn more about these dogs.</a></p>
   </body>
 </html>
